Fix footer flickering on hover enlarge

--- a/style/index.css
+++ b/style/index.css
@@ -161,6 +161,7 @@ h2 {
     flex-wrap: wrap;
     margin: 10% 2% 5%;
     text-align: center;
+    height: 47vw;
 }
 .projects div {
     margin: 2%;
